# archived-dmm

./: .gitignore  CMakeLists.txt  README.md  set_permission.sh
app_example/: CMakeLists.txt
doc/: Build_DMM.md  DMM_DeveloperManual.md
license/: Third_Party_Open_Source_Software_Notice
scripts/: build.sh  build_dmm_dep.sh  build_fstack.sh  build_vpp.sh  (+4 more)
src/: CMakeLists.txt
src/adapt/: nstack_dmm_adpt.c  nstack_epoll_comm.c  nstack_share_res.c  nstack_share_res.h
src/framework/: CMakeLists.txt
src/framework/common/: dmm_sys.c  pid_common.c
src/framework/common/base/include/common/: common_mem_api.h  common_mem_buf.h
src/framework/common/base/liblinuxapi/: base_linux_api_declare.h  nsfw_base_linux_api.c  nsfw_lock_file.c
src/framework/common/data_struct/: eprb_tree.c  list.c  pidinfo.c
src/framework/common/include/: dmm_sys.h  ephlist.h  eprb_tree.h
src/framework/common/include/generic/: dmm_atomic.h  dmm_spinlock.h
src/framework/common/mem_mgr/nsfw_shmem/: nsfw_shmem_mng.c
src/framework/dfx/: nstack_dmm_dfx.c  nstack_dmm_dfx.h
src/framework/event/epoll/: ephlist.h  eprb_tree.h  nstack_epoll_api.c  nstack_epoll_comm.c  nstack_eventpoll.c  nstack_eventpoll.h  nstack_sem.c  nstack_sem.h
src/framework/hal/: hal.c  hal.h
src/framework/include/: dmm_common.h  dmm_config.h  dmm_ring.h  hal_api.h  nsfw_alarm_api.h  nsfw_base_linux_api.h  nsfw_branch_prediction.h  nsfw_common_defs.h  nsfw_dfx_api.h  nsfw_fd_timer_api.h  nsfw_hal_api.h  nsfw_init_api.h  nsfw_maintain_api.h  nsfw_mem_api.h  nsfw_mgr_com_api.h  nsfw_ps_api.h  nsfw_recycle_api.h  nsfw_ring_data.h  nsfw_ring_fun.h  nsfw_snapshot_api.h  nstack_log.h  nstack_rd_data.h  nstack_securec.h  nstack_share_res.h
src/framework/include/common/: compiling_check.h  dmm_fs.h  list.h  pid_common.h  pidinfo.h
src/framework/include/common/generic/: dmm_atomic.h  dmm_barrier.h  dmm_common.h  dmm_config.h  dmm_pause.h  dmm_rwlock.h  dmm_spinlock.h
src/framework/init/: fw_init.c  fw_module.c  fw_module.h
src/framework/ipc/mgr_com/: mgr_com.c  mgr_com.h
src/framework/ipc/ps/: nsfw_fd_timer.c  nsfw_ps_mem_module.c  nsfw_ps_mem_module.h  nsfw_ps_module.c  nsfw_ps_module.h  nsfw_recycle_module.c  nsfw_recycle_module.h  nsfw_soft_param.c
src/framework/lib_common_mem/: common_api.c  common_buf.c
src/framework/log/: nsfw_set_log.c  nstack_log.c  nstack_log_async.c  nstack_log_async.h  nstack_log_auto_suppress.c  nstack_log_auto_suppress.h  nstack_log_auto_suppress_rb_tree.c  nstack_log_auto_suppress_rb_tree.h  nstack_log_base.h
src/framework/maintain/: fw_mt_config.c  nsfw_lock_file.c  nsfw_mem_stat.c  nsfw_res_mgr.c  nsfw_set_log.c  nsfw_soft_param.c  nsfw_ver_mgr.c
src/framework/mem/: dmm_fshm.c  dmm_group.c  dmm_huge.c  dmm_memory.c  dmm_memory.h  dmm_nshmem_mng.c  dmm_nshmem_mng.h  dmm_segment.c  dmm_segment.h  dmm_shmem_mng.c  dmm_shmem_mng.h  nsfw_mem_api.c  nsfw_mem_desc.c
src/framework/mem/basic_mem/: dmm_fshm.c  dmm_group.c  dmm_group.h  dmm_heap.c  dmm_huge.c  dmm_memory.c  dmm_memory.h  dmm_segment.c  dmm_segment.h  dmm_share.h
src/framework/rd/: nstack_rd_api.c
src/framework/res/: nstack_share_res.c
src/framework/ring/: dmm_ring.c  dmm_ring.h  dmm_ring_base.h
src/framework/snapshot/: fw_snapshot.c  fw_snapshot.h
src/include/: declare_syscalls.h.tmpl  nstack_callback_ops.h  nstack_epoll_api.h  nstack_ip_addr.h  nstack_log.h  nstack_rd_api.h  nstack_securec.h  types.h
src/nSocket/: CMakeLists.txt
src/nSocket/include/: dmm_pub_api.h  nstack_atomic.h  nstack_dmm_api.h  nstack_eventpoll.h  nstack_rd.h  nstack_rd_priv.h  nstack_select.h  nstack_sockops.h  nstack_types.h  select_adapt.h
src/nSocket/kernel/: linux_kernel_module.c  linux_kernel_module.h  linux_kernel_socket.c  linux_kernel_socket.h
src/nSocket/nstack/: nstack.c  nstack.h  nstack_fd_mng.c  nstack_fd_mng.h  nstack_info_parse.c  nstack_info_parse.h  nstack_module.c  nstack_module.h  nstack_nsocket_construct.c  nstack_socket.c  nstack_socket.h
src/nSocket/nstack/event/epoll/: nstack_epoll.c  nstack_eventpoll.c
src/nSocket/nstack/event/select/: nstack_select.c  select_adapt.c
src/nSocket/nstack_rd/: nstack_rd.c  nstack_rd_init.c  nstack_rd_ip.c  nstack_rd_ip.h  nstack_rd_ip6.c  nstack_rd_ip6.h  nstack_rd_proto.c  nstack_rd_proto.h  nstack_rd_type.c  nstack_rd_type.h
stacks/fstack/: CMakeLists.txt  fstack.patch  run_fstack.txt
stacks/fstack/app/: Makefile  dmm_start.sh  fstack_client.c  fstack_server.c  multi_sock_tcp_epoll.c  single_sock_tcp_epoll.c
stacks/fstack/config/: config.ini  module_config.json  rd_config.json
stacks/fstack/src/: fstack_adpt.c
stacks/lwip_stack/lwip_src/socket/: CMakeLists.txt  stackx_cfg.h  stackx_container_cfg.c  stackx_epoll_api.c  stackx_epoll_api.h  stackx_event.c  stackx_event.h  stackx_msg_handler.c  stackx_msg_handler.h  stackx_prot_com.c  stackx_prot_com.h  stackx_protocol_api.c  stackx_res_mgr.c  stackx_res_mgr.h  stackx_socket.h  stackx_tcp.c  stackx_udp.c
stacks/lwip_stack/src/mem_mgr/: CMakeLists.txt  nsfw_mem_construct.c  nsfw_mem_stat.c  nsfw_res_mgr.c
stacks/lwip_stack/src/mem_mgr/lib_common_mem/: common_api.c  common_buf.c
stacks/lwip_stack/src/mem_mgr/nsfw_shmem/: nsfw_shmem_mng.c
stacks/lwip_stack/src/mem_mgr/ps_mem/: nsfw_ps_mem_module.c
stacks/lwip_stack/src/sbr/: CMakeLists.txt  sbr_err.h  sbr_index_ring.c  sbr_index_ring.h  sbr_protocol_api.h  sbr_res_mgr.c  sbr_res_mgr.h  sbr_socket.c
stacks/rsocket/: CMakeLists.txt
stacks/rsocket/config/: module_config.json
stacks/rsocket/configure/: module_config.json  rd_config.json
stacks/rsocket/doc/: README.md
stacks/rsocket/src/: rsocket_adpt.c  rsocket_adpt.h  rsocket_rdma.h  rsocket_rs.c
testcode/app_example/: CMakeLists.txt  module_config.json  rd_config.json
testcode/app_example/func-test/: CMakeLists.txt
testcode/app_example/func-test/file_transfer/: CMakeLists.txt  client_filetrans.c
testcode/app_example/func-test/fork/: CMakeLists.txt  tcpclient.c  tcpserver.c
testcode/app_example/perf-test/: CMakeLists.txt  multi_tcp_common_Ser.c  multi_tcp_common_app_Cli.c  multi_tcp_epoll_app_Ser.c
(+204 files in other folders)
